SweetCreations-main/Sweet/template.yaml
# This is the SAM template that represents the architecture of your serverless application
# https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-template-basics.html

# The AWSTemplateFormatVersion identifies the capabilities of the template
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/format-version-structure.html
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
  Sweet

# Transform section specifies one or more macros that AWS CloudFormation uses to process your template
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/transform-section-structure.html
Transform:
  - AWS::Serverless-2016-10-31

# Resources declares the AWS resources that you want to include in the stack
# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
Resources:
  SweetVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: SweetVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: SweetVPC
    Properties:
      Tags:
        - Key: Name
          Value: SweetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: InternetGateway
    Properties:
      VpcId: !Ref SweetVPC
      InternetGatewayId: !Ref InternetGateway

  SubnetPublic1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2a
      MapPublicIpOnLaunch: true
      VpcId: !Ref "SweetVPC"
      CidrBlock: "10.0.1.0/24"
      Tags:
        - Key: Name
          Value: SweetPublic1

  SubnetPublic2:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: us-east-2b
      MapPublicIpOnLaunch: true
      VpcId: !Ref "SweetVPC"
      CidrBlock: "10.0.2.0/24"
      Tags:
        - Key: Name
          Value: SweetPublic2

  RouteTablePub:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "SweetVPC"
      Tags:
        - Key: Name
          Value: SweetPublicRouteTable

  PublicRoute1:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTablePub
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  RouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePub
      SubnetId: !Ref SubnetPublic1

  RouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePub
      SubnetId: !Ref SubnetPublic2

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Sweet access"
      GroupName: SweetSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      VpcId: !Ref "SweetVPC"

  DBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupName: "subnetgroup"
      DBSubnetGroupDescription: "Subnet Group for AuroraDB"
      SubnetIds:
        - !Ref "SubnetPublic1"
        - !Ref "SubnetPublic2"

  SweetSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Credentials for the AuroraDB
      GenerateSecretString:
        SecretStringTemplate: '{"username": "Sweet"}'
        GenerateStringKey: password
        PasswordLength: 32
        ExcludePunctuation: true
      Name: sweetsecret

  # This is a Lambda function config associated with the source code: get-all-items.js
  getAllItemsFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: src/handlers/get-all-items.getAllItemsHandler
      Runtime: nodejs16.x
      Layers:
        - !Ref "SweetLayer"
      Architectures:
        - x86_64
      MemorySize: 128
      Timeout: 100
      Description: A simple example includes a HTTP get method to get all items from a DynamoDB table.
      Events:
        Api:
          Type: Api
          Properties:
            Path: /
            Method: GET
      VpcConfig:
        SecurityGroupIds:
          - !Ref "SecurityGroup"
        SubnetIds:
          - !Ref "SubnetPublic1"
          - !Ref "SubnetPublic2"
  # Each Lambda function is defined by properties:
  # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction

  # This is a Lambda function config associated with the source code: get-by-id.js
  getByIdFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: src/handlers/get-by-id.getByIdHandler
      Runtime: nodejs16.x
      Layers:
        - !Ref "SweetLayer"
      Architectures:
        - x86_64
      MemorySize: 128
      Timeout: 100
      Description: A simple example includes a HTTP get method to get one item by id from a DynamoDB table.
      Events:
        Api:
          Type: Api
          Properties:
            Path: /{id}
            Method: GET
  # Each Lambda function is defined by properties:
  # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction

  # This is a Lambda function config associated with the source code: put-item.js
  putItemFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: src/handlers/put-item.putItemHandler
      Runtime: nodejs16.x
      Layers:
        - !Ref "SweetLayer"
      Architectures:
        - x86_64
      MemorySize: 128
      Timeout: 100
      Description: A simple example includes a HTTP post method to add one item to a DynamoDB table.
      Events:
        Api:
          Type: Api
          Properties:
            Path: /
            Method: POST

  SweetLayer:
    Type: AWS::Lambda::LayerVersion
    Properties:
      LayerName: Sweet-layer-nodejs
      Description: "Lambda layer with nodejs package files"
      Content:
        S3Bucket: sweet-layer-bucket
        S3Key: node.zip
      CompatibleRuntimes:
        - nodejs16.x
  # Simple syntax to create a DynamoDB table with a single attribute primary key, more in
  # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlesssimpletable

Outputs:
  WebEndpoint:
    Description: "API Gateway endpoint URL for Prod stage"
    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
